<resources>
    <string name="app_name">Go Train</string>
    <string name="home_app_title">Go Train Schedules</string>
    <string name="title_arrivals">Arrivals</string>
    <string name="title_info">Info</string>
    <string name="title_union_departures">Departures</string>
    <string name="title_price">Price</string>
    <string name="title_go_fare">Go Fare Pricing</string>
    <string name="union_departures">Go Union Departures</string>
    <string name="no_network_error_message">No network connection. Please check your internet settings.</string>
</resources>